--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <img src="/images/logo.svg" alt="Logo" class="logo">
         <h1>Novo Coração</h1>
         <h2>Um App para cuidar de você</h2>
+        <h3>App em desenvolvimento</h3>
     </div> 
 </body>
 </html>
