troca de texto do h2 e h3

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="container">
         <img src="/images/logo.svg" alt="Logo" class="logo">
         <h1>Novo Coração</h1>
-        <h2>Um App para cuidar de você</h2>
-        <h3>App em desenvolvimento</h3>
+        <h2>Um App para Saúde Cardíaca</h2>
+        <h3>Projeto em desenvolvimento</h3>
     </div> 
 </body>
 </html>
