troca de logotipo para svg white

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <img src="/images/logo.svg" alt="Logo" class="logo">
+        <img src="images/novo-coracao_branco-completo.svg" alt="Logo" class="logo">
         <h1>Novo Coração</h1>
         <h2>Um App para Saúde Cardíaca</h2>
         <h3>Projeto em desenvolvimento</h3>
